# geologic-patterns

./: .gitignore  .npmignore  .yarnrc.yml  LICENSE  Makefile  README.md  build-images  extract-patterns.py  fgdc-geolsym-patternchart.txt  index.js  package.json  poetry.toml  process  pyproject.toml
assets/png-uncompressed/: README.md
doc/: FGDC-documentation.md  build-docs  data.yaml  integrate-data.coffee  names.txt  package-lock.json  package.json  skeleton.html  src.coffee  styles.styl
docs/: FGDC-documentation.md  integrate-data.coffee  integrate-data.ts  names.txt  package.json  src.coffee  src.ts  styles.styl
docs/fonts/: symbol-font.eot
docs/scripts/: build-docs  deploy
procreate-brushes/: create-brushes
procreate-brushes/template/: Brush.archive
scripts/: generate-spritesheet.ts
